# standard_c-_learn

tcp_client_state_pattern/: CMakeLists.txt  DESIGN.md  README.md  main.cpp
tcp_client_state_pattern/include/: ConcreteStates.h  MessageQueue.h  State.h  TCPClient.h
tcp_client_state_pattern/src/: ConcreteStates.cpp  TCPClient.cpp
